chore: clean template files

--- a/index.html
+++ b/index.html
@@ -1,10 +1,37 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="">
   <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <meta charset="UTF-8" />
+    <link rel="icon" href="/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="title" content="linuxCTF" />
+    <meta
+      name="description"
+      content="linuxCTF makes learning linux concepts easier and more effective."
+    />
+    <meta property="og:url" content="/" />
+    <meta property="og:site_name" content="linuxCTF" />
+    <meta property="og:title" content="linuxCTF" />
+    <meta
+      property="og:description"
+      content="linuxCTF makes learning linux concepts easier and more effective."
+    />
+    <meta property="og:locale" content="en" />
+    <meta property="og:type" content="website" />
+    <meta name="twitter:title" content="linuxCTF" />
+    <meta
+      name="twitter:description"
+      content="linuxCTF makes learning linux concepts easier and more effective."
+    />
+    <meta name="author" content="David Saah" />
+    <link href="mailto:davesaah@gmail.com" rel="me" />
+    <link href="https://github.com/DaveSaah" rel="me" />
+    <link href="https://x.com/davesaah_" rel="me" />
+    <link href="https://linkedin.com/in/davesaah" rel="me" />
+    <!-- pages to prefetch  -->
+    <!-- <link rel="prefetch" href="https://url/" /> -->
+    <!-- <link rel="prefetch" href="https://url/page" /> -->
+    <title>linuxCTF</title>
   </head>
   <body>
     <div id="app"></div>
