Switch from Lato to Inter font and update styling

--- a/index.html
+++ b/index.html
@@ -24,19 +24,12 @@
       content="linuxCTF makes learning linux concepts easier and more effective."
     />
     <meta name="author" content="David Saah" />
-    <link href="mailto:davesaah@gmail.com" rel="me" />
-    <link href="https://github.com/DaveSaah" rel="me" />
-    <link href="https://x.com/davesaah_" rel="me" />
-    <link href="https://linkedin.com/in/davesaah" rel="me" />
     <!-- pages to prefetch  -->
-    <!-- <link rel="prefetch" href="https://url/" /> -->
-    <!-- <link rel="prefetch" href="https://url/page" /> -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="prefetch" href="http://localhost:5173/login" />
+    <link rel="prefetch" href="http://localhost:5173/register" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
     <title>linuxCTF</title>
   </head>
   <body>
